Fixup warnings due to deprecated URL constructor (in Edge/IE)
These calls are covered by existing Browser test cases.

Needed to resolve new warnings due to update to Java21
https://github.com/eclipse-platform/eclipse.platform.swt/pull/2824